...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="sendData"
            android:text="@string/button_send" />

        <EditText
            android:id="@+id/enter_data_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/enter_hint" />

        <TextView
            android:id="@+id/enter_data_response_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

...
